fix(user-groups): resolve group detail API and UI issues found during QA testing
- Enrich group API response with member details (names, registration numbers)
  via Members.findByIds lookup for both owners and members
- Use MemberId type in AddMemberRequest for proper HAL+FORMS member selector
- Conditionally show owner-only affordances (update, delete, addMember) based
  on requesting user's ownership status
- Hide removeGroupMember affordance for members who are also owners
- Fix remove member action using member self link instead of group path
- Add delete group modal with redirect to /groups after successful deletion
- Fix memberId field label in HalFormsMemberId component using getFieldLabel

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>