@@ -4,10 +4,13 @@ import com.klabis.common.mvc.MvcComponent;
 import com.klabis.common.ui.RootModel;
 import com.klabis.members.CurrentUser;
 import com.klabis.members.CurrentUserData;
+import com.klabis.members.MemberDto;
 import com.klabis.members.MemberId;
+import com.klabis.members.Members;
 import com.klabis.usergroups.UserGroupId;
 import com.klabis.usergroups.application.GroupManagementPort;
 import com.klabis.usergroups.domain.FreeGroup;
+import com.klabis.usergroups.domain.GroupMembership;
 import com.klabis.usergroups.domain.UserGroup;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
@@ -24,7 +27,10 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import static com.klabis.common.ui.HalFormsSupport.klabisAfford;
 import static com.klabis.common.ui.HalFormsSupport.klabisLinkTo;
@@ -39,9 +45,11 @@ import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.methodOn;
 class GroupController {
 
     private final GroupManagementPort groupManagementService;
+    private final Members members;
 
-    GroupController(GroupManagementPort groupManagementService) {
+    GroupController(GroupManagementPort groupManagementService, Members members) {
         this.groupManagementService = groupManagementService;
+        this.members = members;
     }
 
     @PostMapping(consumes = "application/json")
@@ -89,14 +97,20 @@ class GroupController {
         UserGroupId groupId = new UserGroupId(id);
         UserGroup group = groupManagementService.getGroup(groupId);
 
-        GroupResponse response = toGroupResponse(group);
+        MemberId requestingMember = currentUser != null ? currentUser.memberId() : null;
+        boolean isOwner = requestingMember != null && group.isOwner(requestingMember);
+
+        GroupResponse response = toGroupResponse(group, id, isOwner);
         EntityModel<GroupResponse> model = EntityModel.of(response);
 
         klabisLinkTo(methodOn(GroupController.class).getGroup(id, null)).ifPresent(link -> {
-            var selfLink = link.withSelfRel()
-                    .andAffordances(klabisAfford(methodOn(GroupController.class).renameGroup(id, null, null)))
-                    .andAffordances(klabisAfford(methodOn(GroupController.class).deleteGroup(id, null)))
-                    .andAffordances(klabisAfford(methodOn(GroupController.class).addMember(id, null, null)));
+            var selfLink = link.withSelfRel();
+            if (isOwner) {
+                selfLink = selfLink
+                        .andAffordances(klabisAfford(methodOn(GroupController.class).updateGroup(id, null, null)))
+                        .andAffordances(klabisAfford(methodOn(GroupController.class).deleteGroup(id, null)))
+                        .andAffordances(klabisAfford(methodOn(GroupController.class).addGroupMember(id, null, null)));
+            }
             model.add(selfLink);
         });
 
@@ -108,7 +122,7 @@ class GroupController {
 
     @PatchMapping(value = "/{id}", consumes = "application/json")
     @Operation(summary = "Rename a group (owner only)")
-    ResponseEntity<Void> renameGroup(
+    ResponseEntity<Void> updateGroup(
             @Parameter(description = "Group UUID") @PathVariable UUID id,
             @Valid @RequestBody RenameGroupRequest request,
             @CurrentUser CurrentUserData currentUser) {
@@ -135,7 +149,7 @@ class GroupController {
 
     @PostMapping(value = "/{id}/members", consumes = "application/json")
     @Operation(summary = "Add a member to group (owner only)")
-    ResponseEntity<Void> addMember(
+    ResponseEntity<Void> addGroupMember(
             @Parameter(description = "Group UUID") @PathVariable UUID id,
             @Valid @RequestBody AddMemberRequest request,
             @CurrentUser CurrentUserData currentUser) {
@@ -143,14 +157,13 @@ class GroupController {
         requireMemberProfile(currentUser);
 
         UserGroupId groupId = new UserGroupId(id);
-        MemberId memberToAdd = new MemberId(request.memberId());
-        groupManagementService.addMemberToGroup(groupId, memberToAdd, currentUser.memberId());
+        groupManagementService.addMemberToGroup(groupId, request.memberId(), currentUser.memberId());
         return ResponseEntity.noContent().build();
     }
 
     @DeleteMapping("/{id}/members/{memberId}")
     @Operation(summary = "Remove a member from group (owner only)")
-    ResponseEntity<Void> removeMember(
+    ResponseEntity<Void> removeGroupMember(
             @Parameter(description = "Group UUID") @PathVariable UUID id,
             @Parameter(description = "Member UUID") @PathVariable UUID memberId,
             @CurrentUser CurrentUserData currentUser) {
@@ -175,12 +188,63 @@ class GroupController {
         return new GroupSummaryResponse(group.getId().uuid(), group.getName());
     }
 
-    private GroupResponse toGroupResponse(UserGroup group) {
-        List<UUID> ownerIds = group.getOwners().stream().map(MemberId::uuid).toList();
-        List<GroupMembershipResponse> memberList = group.getMembers().stream()
-                .map(m -> new GroupMembershipResponse(m.memberId().uuid(), m.joinedAt()))
+    private GroupResponse toGroupResponse(UserGroup group, UUID groupUuid, boolean requestingUserIsOwner) {
+        Set<MemberId> ownerIdSet = group.getOwners();
+        List<MemberId> ownerIds = ownerIdSet.stream().toList();
+        List<MemberId> memberIds = group.getMembers().stream().map(GroupMembership::memberId).toList();
+
+        List<MemberId> allIds = ownerIds.stream()
+                .filter(id -> !memberIds.contains(id))
+                .collect(Collectors.toList());
+        allIds.addAll(memberIds);
+
+        Map<MemberId, MemberDto> memberDtoMap = members.findByIds(allIds);
+
+        List<OwnerResponse> ownerResponses = ownerIds.stream()
+                .map(id -> toOwnerResponse(id, memberDtoMap.get(id)))
                 .toList();
-        return new GroupResponse(group.getId().uuid(), group.getName(), ownerIds, memberList);
+
+        List<EntityModel<GroupMembershipResponse>> memberResponses = group.getMembers().stream()
+                .map(m -> buildMemberModel(m, memberDtoMap.get(m.memberId()), groupUuid, requestingUserIsOwner, ownerIdSet))
+                .toList();
+
+        return new GroupResponse(group.getId().uuid(), group.getName(), ownerResponses, memberResponses);
+    }
+
+    private OwnerResponse toOwnerResponse(MemberId ownerId, MemberDto dto) {
+        if (dto == null) {
+            return new OwnerResponse(ownerId.uuid(), null, null, null);
+        }
+        return new OwnerResponse(dto.memberId(), dto.firstName(), dto.lastName(), dto.registrationNumber());
+    }
+
+    private EntityModel<GroupMembershipResponse> buildMemberModel(
+            GroupMembership membership, MemberDto dto, UUID groupUuid, boolean isOwner, Set<MemberId> ownerIds) {
+
+        GroupMembershipResponse response;
+        if (dto == null) {
+            response = new GroupMembershipResponse(membership.memberId().uuid(), null, null, null, membership.joinedAt());
+        } else {
+            response = new GroupMembershipResponse(
+                    membership.memberId().uuid(),
+                    dto.firstName(),
+                    dto.lastName(),
+                    dto.registrationNumber(),
+                    membership.joinedAt());
+        }
+
+        EntityModel<GroupMembershipResponse> model = EntityModel.of(response);
+
+        boolean memberIsOwner = ownerIds.contains(membership.memberId());
+        if (isOwner && !memberIsOwner) {
+            klabisLinkTo(methodOn(GroupController.class)
+                    .removeGroupMember(groupUuid, membership.memberId().uuid(), null))
+                    .ifPresent(link -> model.add(link.withSelfRel()
+                            .andAffordances(klabisAfford(methodOn(GroupController.class)
+                                    .removeGroupMember(groupUuid, membership.memberId().uuid(), null)))));
+        }
+
+        return model;
     }
 
     private void requireMemberProfile(CurrentUserData currentUser) {
